<resources>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">logout</string>
    <string name="your_loans">Loans</string>
    <string name="app_heading">Easy Loans</string>
    <string name="login_error_message">Invalid Login credentials</string>
    <string name="enter_code">Enter code</string>
    <string name="confirm_password">Confirm password</string>
    <string name="loan_type">Loan type :  </string>
    <string name="signUp">SignUp</string>
    <string name="home_profile">Profile</string>
    <string name="title_dashboard">Active Loans</string>
    <string name="title_notifications">Closed Loans</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_payment">title activity payment</string>
    <string name="invalid_username">Invalid username</string>
    <string name="username_empty">"Username can't be empty"</string>
    <string name="password_empty">"Password can't be empty"</string>

    <string name="login_successful">"Login successful!"</string>
    <string name="invalid_code">"Code is invalid"</string>
    <string name="reset_to_new">"Reset to new password"</string>
    <string name="code_sent">"Code sent to your email successfully"</string>
    <string name="rest_failed">"reset password call failed"</string>
    <string name="both_required">"Both fields are required"</string>
    <string name="email_required">"Please enter emailId"</string>
    <string name="invalid_password">"Invalid password"</string>
    <string name="invalid_email">"Invalid emailId"</string>
    <string name="emi_amount">"EMI Amount: ₹ %s"</string>
    <string name="outstanding_amount">"OutStanding Principal : ₹ %s"</string>
    <string name="empty_code">"Code can't be empty"</string>
    <string name="valid_amount">"Amount should not be less than minimum"</string>
    <string name="call_message">"call us: 1800 1234 5671"</string>
    <string name="app_name">"LoanRepayment"</string>
    <string name="all_fields_needed">"Please fill in all fields"</string>
    <string name="signup_success">""Sign up successful!""</string>
</resources>